--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,4 +6,7 @@
     <h1>Homepage</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ea porro eos doloribus repellat vitae laboriosam harum excepturi repellendus explicabo pariatur assumenda facilis, ratione voluptas fugiat, quaerat, labore optio alias?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptate accusantium, ad cum corrupti, temporibus at placeat eaque atque officiis cupiditate blanditiis inventore rem sint voluptates maxime fugit beatae provident.</p>
+    <p>
+        <a href="{{ path('app_contact') }}" class="btn btn-success">Contact</a>
+    </p>
 {% endblock %}
