Add entity project with event prePersist and preUpdated

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,5 +8,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptate accusantium, ad cum corrupti, temporibus at placeat eaque atque officiis cupiditate blanditiis inventore rem sint voluptates maxime fugit beatae provident.</p>
     <p>
         <a href="{{ path('app_contact') }}" class="btn btn-success">Contact</a>
+        <a href="{{ path('app_project_index') }}" class="btn btn-success">Projects</a>
     </p>
 {% endblock %}
