--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <a href="{{ path('app_project_index') }}" class="btn btn-secondary float-right">back to list</a>
-    <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+    <button class="btn {{ button_color|default('btn-outline-primary') }}  mt-3">{{ button_label|default('Save Project') }}</button>
 {{ form_end(form) }}
