--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -9,39 +9,57 @@
         <a href="{{ path('app_home') }}" class="btn btn-success">Homepage</a>
     </p>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Slug</th>
-                <th>Description</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for project in projects %}
-            <tr>
-                <td>{{ project.id }}</td>
-                <td>{{ project.name }}</td>
-                <td>{{ project.slug }}</td>
-                <td>{{ project.description }}</td>
-                <td>{{ project.createdAt ? project.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ project.updatedAt ? project.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_project_show', {'id': project.id}) }}" class="btn btn-primary">show</a>
-                    <a href="{{ path('app_project_edit', {'id': project.id}) }}" class="btn btn-success">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card-header">
+        <a class="btn btn-sm btn-outline-primary" href="{{ path('app_project_new') }}"> 
+            Create New Project 
+        </a>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Slug</th>
+                    <th>Description</th>
+                    <th>CreatedAt</th>
+                    <th>UpdatedAt</th>
+                    <th width="240px">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for project in projects %}
+                <tr>
+                    <td>{{ project.id }}</td>
+                    <td>{{ project.name }}</td>
+                    <td>{{ project.slug }}</td>
+                    <td>{{ project.description }}</td>
+                    <td>{{ project.createdAt ? project.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                    <td>{{ project.updatedAt ? project.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                    <td>
+                        <form method="post" action="{{ path('app_project_delete', {'id': project.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <a
+                                class="btn btn-sm btn-outline-info"
+                                href="{{ path('app_project_show', {'id': project.id}) }}">
+                                Show
+                            </a>
+                            <a
+                                class="btn btn-sm btn-outline-success"
+                                href="{{ path('app_project_edit', {'id': project.id}) }}">
+                                Edit
+                            </a>
 
-    <a href="{{ path('app_project_new') }}" class="btn btn-info">Create new</a>
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
+                            <button class="btn btn-sm btn-outline-danger">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="7">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
