--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -3,8 +3,15 @@
 {% block title %}New Project{% endblock %}
 
 {% block body %}
-    <h1>Create new Project</h1>
-
-    {{ include('project/_form.html.twig') }}
-
+    <h2 class="text-center mt-5 mb-3">Create Project</h2>
+    <div class="card">
+        <div class="card-header">
+            <a class="btn btn-outline-info float-right" href="{{ path('app_project_index') }}"> 
+                View All Projects
+            </a>
+        </div>
+        <div class="card-body">
+                {{ include('project/_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
