--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -3,44 +3,28 @@
 {% block title %}Project{% endblock %}
 
 {% block body %}
-    <h1>Project</h1>
-
-    <p>
-        <a href="{{ path('app_home') }}" class="btn btn-success">Homepage</a>
-    </p>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ project.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ project.name }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ project.slug }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ project.description }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ project.createdAt ? project.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ project.updatedAt ? project.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_project_index') }}" class="btn btn-secondary">back to list</a>
-
-    <a href="{{ path('app_project_edit', {'id': project.id}) }}" class="btn btn-primary">edit</a>
-
+    <h2 class="text-center mt-5 mb-3">Show Project</h2>
+    <div class="card">
+        <div class="card-header">
+            <a class="btn btn-sm btn-outline-info float-right" href="{{ path('app_project_index') }}"> 
+                View All Projects
+            </a>
+            <a href="{{ path('app_home') }}" class="btn btn-sm btn-outline-success float-right">Homepage</a>
+            <a href="{{ path('app_project_index') }}" class="btn btn-sm btn-outline-secondary float-right">back to list</a>
+            <a href="{{ path('app_project_edit', {'id': project.id}) }}" class="btn btn-sm btn-outline-primary float-right">edit</a>
+        </div>
+        <div class="card-body">
+            <b class="text-muted">Name:</b>
+            <p>{{ project.name }}</p>
+            <b class="text-muted">Slug:</b>
+            <p>{{ project.slug }}</p>
+            <b class="text-muted">Description:</b>
+            <p>{{ project.description }}</p>
+            <b class="text-muted">Date Created:</b>
+            <p>{{ project.createdAt ? project.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+            <b class="text-muted">Date Updated:</b>
+            <p>{{ project.updatedAt ? project.updatedAt|date('Y-m-d H:i:s') : '' }}</p>
+        </div>
+    </div>
     {{ include('project/_delete_form.html.twig') }}
 {% endblock %}
